--- a/supported/README.adoc
+++ b/supported/README.adoc
@@ -18,7 +18,6 @@ address issues.
 * Debian GNU/kFreeBSD
 * FreeBSD
 * NetBSD
-* OpenBSD
 
 For all of these operating systems, the most recent major version of the
 operating system is supported.
@@ -63,6 +62,13 @@ That means scripts will be written for `/bin/sh` and that binary is expected to
 support the `local` keyword.
 A suitable `which` binary (one producing output roughly equivalent to the SUSv4
 `command -v`) is also required.
+
+== IPv6
+
+IPv6 is supported in all modern operating systems.  New network-facing services
+will use IPv6 sockets with IPv4-mapped addresses to simplify implementation and
+maintenance.  Local customizations that disable IPv6 or make it unusable are not
+supported.
 
 == Unsupported Systems
 
