Add a basic style guide and code practices document
Signed-off-by: brian m. carlson <sandals@crustytoothpaste.net>

--- a/README.adoc
+++ b/README.adoc
@@ -12,5 +12,6 @@ License].
 
 == Documents
 
+link:code-practices/[Code Practices (Style Guide)]
 link:security-research/[Security Research Policy]
 link:supported/[Supported OS & Software Policy]
